--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,79 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/CountBu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:text="부수"
+        app:layout_constraintBottom_toTopOf="@+id/editBu"
+        app:layout_constraintStart_toStartOf="@+id/editBu" />
+
+    <TextView
+        android:id="@+id/CountMeon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="면수"
+        app:layout_constraintBottom_toTopOf="@+id/editMeon"
+        app:layout_constraintStart_toStartOf="@+id/editMeon" />
+
+    <EditText
+        android:id="@+id/editBu"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/editMeon"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/FinalPrice"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="200dp"
+        android:text="가격이 표시됨"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/Won"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:text="원"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/FinalPrice"
+        app:layout_constraintTop_toTopOf="@+id/FinalPrice" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="경기도앨범제작사업협동조합"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:text="계산"
+        app:layout_constraintStart_toEndOf="@+id/Won"
+        app:layout_constraintTop_toTopOf="@+id/FinalPrice" />
 </androidx.constraintlayout.widget.ConstraintLayout>
