--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="부수"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/editBu"
         app:layout_constraintStart_toStartOf="@+id/editBu" />
 
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="면수"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/editMeon"
         app:layout_constraintStart_toStartOf="@+id/editMeon" />
 
@@ -61,6 +63,7 @@
         android:layout_width="50dp"
         android:layout_height="40dp"
         android:text="원"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/FinalPrice"
         app:layout_constraintTop_toTopOf="@+id/FinalPrice" />
@@ -71,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="경기도앨범제작사업협동조합"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -81,6 +85,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:text="계산"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Won"
         app:layout_constraintTop_toTopOf="@+id/FinalPrice" />
 
@@ -185,6 +190,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="앨범코드"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/radioGroup"
         app:layout_constraintStart_toStartOf="@+id/radioGroup" />
 
@@ -193,6 +199,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="표지부착물"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
         app:layout_constraintStart_toStartOf="@+id/radioGroup2" />
 
@@ -275,6 +282,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="포크로스 3단" />
+
+            <RadioButton
+                android:id="@+id/noChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="선택안함" />
         </TableRow>
     </TableLayout>
 
@@ -289,6 +302,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="표지"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/table"
         app:layout_constraintStart_toStartOf="@+id/table" />
 
