--- a/app/src/main/res/values/codeArray.xml
+++ b/app/src/main/res/values/codeArray.xml
@@ -5,6 +5,7 @@
         <item>대사절 250*335</item>
         <item>정사절 250*250</item>
         <item>국팔절 220*297</item>
+        <item>290*245</item>
         <item>신사절면지 250*315</item>
         <item>대사절면지 250*335</item>
     </string-array>
